variables.RunHalf.scala.error
Compilation error:
RunHalf:8: error: not found: type Orange
  if (getGroundColor():Orange){
                       ^